nbv_code/ros2_ws2/log/build_2025-01-08_01-58-05/my_robot_nbv/stderr.log
  File "/home/jajayu/TomatoHarvesting_NextBestView/nbv_code/ros2_ws2/install/my_robot_nbv/lib/python3.10/site-packages/my_robot_nbv/nbv_tompcd_filter.py", line 88
    self.cy = #(324.42742919921875)#image_width / 2
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax

